--- a/src/components/productSwiper/ProductSwiper.css
+++ b/src/components/productSwiper/ProductSwiper.css
@@ -1,13 +1,14 @@
-.swiper {
+.mySwiper {
     width: 100%;
     height: 100%;
+    
   }
   
   .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-  
+    border: #296560;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,5 +19,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border: #296560;
+
   }
   
