--- a/src/pages/cart/Cart.scss
+++ b/src/pages/cart/Cart.scss
@@ -1,31 +1,46 @@
 .checkout-container {
-    width: 55%;
-    min-height: 90vh;
+  width: 80%;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px auto ;
+  border-radius: 30px;
+  background-color: #eef4fd;
+
+  box-shadow: 8px 8px 5px 8px #bdbdbdbf;
+  justify-content: center;
+  color: gray;
+
+  .checkout-header {
+    width: 80%;
+    padding: 15px 15px 15px 15px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px auto 0;
+    justify-content: space-between;
+    border-bottom: 1px solid darkgrey;
   
-    .checkout-header {
-      width: 100%;
-      padding: 10px 0;
+
+    font-size: 16pt;
+    font-style: italic;
+
+    .header-block {
+      text-transform: capitalize;
+     
+    
       display: flex;
-      justify-content: space-between;
-      border-bottom: 1px solid darkgrey;
-  
-      .header-block {
-        text-transform: capitalize;
-        width: 23%;
-  
-        &:last-child {
-          width: 8%;
-        }
+   
+      font-weight: bold,;
+   
+      &:last-child {
+        width: 8%;
       }
     }
-  
-    .total {
-      margin-top: 30px;
-      margin-left: auto;
-      font-size: 36px;
-    }
   }
+
+  .total {
+  
+    margin-top: 30px;
+  
+    font-size: 36px;
+  }
+}
