--- a/src/components/cart/checkoutItem/Checkout-item.scss
+++ b/src/components/cart/checkoutItem/Checkout-item.scss
@@ -25,7 +25,7 @@
 
 .quantity {
   display: flex;
-
+z
   .arrow {
     cursor: pointer;
   }
@@ -39,4 +39,6 @@
   padding-left: 12px;
   cursor: pointer;
 }
+
 }
+
