--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,7 +3,15 @@
   font-size: small;
   font-weight: 200px;
   color: #a1887f;
+  bottom: 0;
+  left: 0;
+  clear: both;
+    position: relative;
+  /*  height: 200px;
+     margin-top: -200px; */
+     /* margin-top: 200px !important; */
 }
+
 
 .links-footer {
 
