--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,7 +8,7 @@
 
 .brand {
 
-    background-image: url(../../assets/images/CAFETERÍA\ REVECO\ .gif);
+    background-image: url(../../assets/images/CAFETERÍAREVECO.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
